# definednamespace

./: .gitignore  ChangeLog  Pipfile  README.md  XSD.md  requirements.txt  setup.cfg  setup.py  tox.ini
definednamespace/: CSVW.py  DC.py  DCAM.py  DCAT.py  DCMITYPE.py  DCTERMS.py  DOAP.py  FOAF.py  ODRL2.py  ORG.py  OWL.py  PROF.py  PROV.py  RDF.py  RDFS.py  SDO.py  SH.py  SKOS.py  SOSA.py  SSN.py  TIME.py  VANN.py  VOID.py  XSD.py  __init__.py
generator/: generate_namespace.py  prefixcc.py
generators/: generate_namespace.py  generate_xsd_namespace.py  template.py
rdflib/namespace/: RDF.py  RDFVOC.py  __init__.py
schemas/: datatypes.xsd
scripts/: generate_included_namespaces.py
tests/: __init__.py  generate_included_namespaces.py  test_command_line.py  test_definednamespace.py  test_generate_namespace.py  test_rdfvoc.py
tests/data/: RDFMOD.py  SKOS.py  rdf-schema_mod.ttl
