[metadata]
name = definednamespace
url = http://github.com/hsolbrig/definednamespace
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = Proposed replacement for rdflib ClosedNamespace
license = CC0 1.0 Universal
python-requires = >=3.5
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

keywords =
    rdflib
    RDF
    namespace

[files]
packages =
    definednamespace
    generator

[entry_points]
console_scripts =
    generate_rdf_namespace = generator.generate_namespace:main
    generate_xsd_namespace = generator.generate_xsd_namespace:main